feat: social proof section (+150 interested, 30% qualified) and testimonial carousel

--- a/index.html
+++ b/index.html
@@ -122,6 +122,93 @@
       </div>
     </section>
 
+    <!-- 4.5️⃣ SOCIAL PROOF & METRICS -->
+    <section class="section-padding">
+      <div class="container">
+        <div class="text-center" style="margin-bottom: 60px;">
+          <div
+            style="text-transform: uppercase; letter-spacing: 0.1em; font-weight: 700; color: var(--teal); margin-bottom: 24px;">
+            Prova Social</div>
+          <h2 class="hero__headline" style="font-size: 2.5rem; margin-bottom: 24px; color: var(--navy);">Resultados que
+            geram confiança.</h2>
+          <blockquote
+            style="font-size: 1.25rem; color: var(--gray); max-width: 800px; margin: 0 auto; border-left: none; padding: 0;">
+            “Veja como participações coletivas funcionam em outras categorias — e por que elas geram resultados.”
+          </blockquote>
+        </div>
+
+        <!-- Metrics Grid -->
+        <div class="metrics-grid text-center">
+          <div class="metric-item">
+            <span class="metric-value">+150</span>
+            <span class="metric-label">Pessoas Interessadas</span>
+          </div>
+          <div class="metric-item">
+            <span class="metric-value">30%</span>
+            <span class="metric-label">Já Qualificados</span>
+          </div>
+          <div class="metric-item">
+            <span class="metric-value">10</span>
+            <span class="metric-label">Vagas Grupo Inaugural</span>
+          </div>
+        </div>
+
+        <!-- Testimonial Carousel -->
+        <div class="carousel-container">
+          <div class="carousel-track">
+            <!-- Testimonial 1 -->
+            <div class="testimonial-card">
+              <p class="testimonial-text">"Sempre quis o iPhone mas fugia dos juros. O modelo da WEKOTA é a
+                transparência que eu precisava para finalmente ter o meu Pro Max."</p>
+              <div class="testimonial-author">
+                <div class="author-avatar">RM</div>
+                <div class="author-info">
+                  <h4>Ricardo M.</h4>
+                  <p>Participante Qualificado</p>
+                </div>
+              </div>
+            </div>
+            <!-- Testimonial 2 -->
+            <div class="testimonial-card">
+              <p class="testimonial-text">"Estar em um grupo com regras europeias me deu a segurança que eu não sentia
+                em outros modelos. O contrato é muito claro."</p>
+              <div class="testimonial-author">
+                <div class="author-avatar">SC</div>
+                <div class="author-info">
+                  <h4>Sofia C.</h4>
+                  <p>Participante em Análise</p>
+                </div>
+              </div>
+            </div>
+            <!-- Testimonial 3 -->
+            <div class="testimonial-card">
+              <p class="testimonial-text">"O suporte foi excelente desde o primeiro contacto. Dá para perceber que
+                existe uma estrutura séria por trás de tudo."</p>
+              <div class="testimonial-author">
+                <div class="author-avatar">JP</div>
+                <div class="author-info">
+                  <h4>João P.</h4>
+                  <p>Interessado na Lista</p>
+                </div>
+              </div>
+            </div>
+            <!-- Testimonial 4 -->
+            <div class="testimonial-card">
+              <p class="testimonial-text">"A WEKOTA resolveu meu problema com a burocracia bancária. Finalmente posso
+                planejar meu acesso à tecnologia premium."</p>
+              <div class="testimonial-author">
+                <div class="author-avatar">ML</div>
+                <div class="author-info">
+                  <h4>Mariana L.</h4>
+                  <p>Participante Qualificada</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- 5️⃣ HOW IT WORKS (STRUCTURED EXPLANATION) -->
     <section class="section-padding" id="como-funciona">
       <div class="container">
