style: final full-bleed layout and official branding alignment

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
       </div>
     </section>
 
-    <!-- 3️⃣ FEATURED DEVICE (PREMIUM CARD) -->
-    <section class="section-padding bg-light" id="aparelho">
+    <!-- 3️⃣ FEATURED DEVICE (FULL-BLEED) -->
+    <section class="featured-section" id="aparelho">
       <div class="container">
-        <div class="featured-card">
+        <div class="featured-grid-wrap">
           <!-- Left Content -->
-          <div class="featured-card__left">
-            <span class="badge badge--teal">DISPOSITIVO EM DESTAQUE</span>
+          <div class="featured-content">
+            <span class="badge">DISPOSITIVO EM DESTAQUE</span>
             <h2 class="featured-card__title">iPhone 17 Pro Max 256GB <br> <span class="text-teal">Laranja</span></h2>
 
             <p class="featured-card__desc">
@@ -108,13 +108,13 @@
           </div>
 
           <!-- Right Visual -->
-          <div class="featured-card__right">
+          <div class="featured-visual">
             <div class="group-badge">
-              <svg viewBox="0 0 40 40" class="group-logo">
-                <path d="M20 20 L20 2 A18 18 0 0 0 2 20 Z" fill="#FFFFFF" opacity="0.5" />
-                <path d="M20 20 L2 20 A18 18 0 0 0 20 38 Z" fill="#FFFFFF" opacity="0.5" />
-                <path d="M20 20 L20 38 A18 18 0 0 0 38 20 Z" fill="#FFFFFF" opacity="0.5" />
-                <path d="M20 20 L38 20 A18 18 0 0 0 20 2 Z" fill="#2FB6A6" />
+              <svg viewBox="0 0 40 40" class="group-logo" fill="none">
+                <path d="M20 5 A15 15 0 0 0 5 20" stroke="white" stroke-width="6" opacity="0.5" />
+                <path d="M5 20 A15 15 0 0 0 20 35" stroke="white" stroke-width="6" opacity="0.5" />
+                <path d="M20 35 A15 15 0 0 0 35 20" stroke="white" stroke-width="6" opacity="0.5" />
+                <path d="M35 20 A15 15 0 0 0 20 5" stroke="#2FB6A6" stroke-width="6" />
               </svg>
               <span>GRUPO #01</span>
             </div>
