[dyad] Redesigned the "Featured Device" section to improve UX and conversion. Removed the heavy blue background in favor of a clean white aesthetic, improved readability with higher contrast typography, and optimized the layout (F-pattern) by placing the product visual on the left. Also adjusted surrounding sections for better visual flow.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,26 @@
       </div>
     </section>
 
-    <!-- 3️⃣ FEATURED DEVICE (FULL-BLEED) -->
+    <!-- 3️⃣ FEATURED DEVICE (CLEAN & CONVERTING) -->
     <section class="featured-section" id="aparelho">
       <div class="container">
         <div class="featured-grid-wrap">
-          <!-- Left Content -->
+          <!-- Left Visual (Switch positions for better F-pattern) -->
+          <div class="featured-visual">
+            <div class="group-badge">
+              <svg viewBox="0 0 40 40" class="group-logo" fill="none">
+                <path d="M20 5 A15 15 0 0 0 5 20" stroke="currentColor" stroke-width="6" opacity="0.2" />
+                <path d="M5 20 A15 15 0 0 0 20 35" stroke="currentColor" stroke-width="6" opacity="0.2" />
+                <path d="M20 35 A15 15 0 0 0 35 20" stroke="currentColor" stroke-width="6" opacity="0.2" />
+                <path d="M35 20 A15 15 0 0 0 20 5" stroke="#2FB6A6" stroke-width="6" />
+              </svg>
+              <span>GRUPO #01</span>
+            </div>
+            <img src="images/product-orange.png" alt="iPhone 17 Pro Max Orange" class="featured-img"
+              style="mix-blend-mode: normal;">
+          </div>
+
+          <!-- Right Content -->
           <div class="featured-content">
             <span class="badge">DISPOSITIVO EM DESTAQUE</span>
             <h2 class="featured-card__title">iPhone 17 Pro Max 256GB <br> <span class="text-teal">Laranja</span></h2>
@@ -106,36 +121,22 @@
                 style="width: 18px; height: 18px; margin-left: 8px;"></i>
             </a>
           </div>
-
-          <!-- Right Visual -->
-          <div class="featured-visual">
-            <div class="group-badge">
-              <svg viewBox="0 0 40 40" class="group-logo" fill="none">
-                <path d="M20 5 A15 15 0 0 0 5 20" stroke="white" stroke-width="6" opacity="0.5" />
-                <path d="M5 20 A15 15 0 0 0 20 35" stroke="white" stroke-width="6" opacity="0.5" />
-                <path d="M20 35 A15 15 0 0 0 35 20" stroke="white" stroke-width="6" opacity="0.5" />
-                <path d="M35 20 A15 15 0 0 0 20 5" stroke="#2FB6A6" stroke-width="6" />
-              </svg>
-              <span>GRUPO #01</span>
-            </div>
-            <img src="images/product-orange.png" alt="iPhone 17 Pro Max Orange" class="featured-img">
-          </div>
         </div>
       </div>
     </section>
 
     <!-- 3.5️⃣ LINEUP SECTION (COLOR VARIATIONS) -->
-    <section class="section-padding">
+    <section class="section-padding bg-light">
       <div class="container text-center">
-        <h2 class="hero__headline" style="font-size: 2.5rem; margin-bottom: 24px;">Escolha a sua cor.</h2>
+        <h2 class="hero__headline" style="font-size: 2.5rem; margin-bottom: 24px; color: var(--navy);">Escolha a sua cor.</h2>
         <div class="lineup__visual">
-          <img src="images/lineup.png" alt="iPhone 17 Pro Max Lineup" class="lineup__img">
+          <img src="images/lineup.png" alt="iPhone 17 Pro Max Lineup" class="lineup__img" style="mix-blend-mode: normal;">
         </div>
       </div>
     </section>
 
     <!-- 4️⃣ FEATURES SECTION (WHY WEKOTA IS TRUSTWORTHY) -->
-    <section class="section-padding bg-light" id="confianca">
+    <section class="section-padding" id="confianca" style="background-color: var(--white);">
       <div class="container">
         <div class="text-center" style="margin-bottom: 80px;">
           <div
@@ -162,7 +163,7 @@
             geram confiança.</h2>
           <blockquote
             style="font-size: 1.25rem; color: var(--gray); max-width: 800px; margin: 0 auto; border-left: none; padding: 0;">
-            “Veja como participações coletivas funcionam em outras categorias — e por que elas geram resultados.”
+            "Veja como participações coletivas funcionam em outras categorias — e por que elas geram resultados."
           </blockquote>
         </div>
 
