[dyad] Atualizei a seção "Sobre" com o novo manifesto da WEKOTA, destacando o modelo de aquisição coletiva europeu. Reestruturei o layout para facilitar a leitura, separando a explicação conceitual dos benefícios práticos (sem juros, sem bancos) em um card de transparência, mantendo o tom premium e profissional.

--- a/index.html
+++ b/index.html
@@ -311,34 +311,42 @@
     <!-- 6️⃣ ABOUT WEKOTA & TRANSPARENCY -->
     <section class="section-padding bg-navy" id="sobre">
       <div class="container">
-        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 80px; align-items: start;">
-          <div>
-            <div
-              style="text-transform: uppercase; letter-spacing: 0.1em; font-weight: 700; color: var(--teal); margin-bottom: 24px;">
-              Sobre Nós</div>
-            <h2 class="hero__headline" style="color: var(--white); font-size: 2.5rem; margin-bottom: 24px;">Quem é a
-              WEKOTA?</h2>
-            <p style="color: rgba(255,255,255,0.8); margin-bottom: 24px;">Somos uma plataforma europeia dedicada a
-              democratizar o acesso à tecnologia premium através de modelos de aquisição coletiva de alta performance.
-            </p>
-            <p style="color: rgba(255,255,255,0.8);">Com operações em Portugal e Espanha, a nossa missão é substituir a
-              burocracia bancária por uma estrutura inteligente, confiável e centrada no participante.</p>
+        <div class="about-grid">
+          <div class="about-content">
+            <div class="badge-teal">Sobre Nós</div>
+            <h2 class="hero__headline" style="color: var(--white); font-size: 2.5rem; margin-bottom: 24px;">Quem é a WEKOTA?</h2>
+            
+            <div class="about-text-wrapper">
+              <p class="about-lead">WEKOTA é a nova forma inteligente de acessar tecnologia premium.</p>
+              <p>Somos uma empresa europeia estruturada que organiza grupos de aquisição coletiva com regras claras, valor total definido desde o início e ordem contratual transparente.</p>
+              <p>Substituímos a burocracia bancária por previsibilidade.</p>
+              <p>Com a WEKOTA, você participa de um modelo organizado, com mensalidades fixas e entrega definida contratualmente.</p>
+            </div>
           </div>
-          <div
-            style="background: rgba(255,255,255,0.05); padding: 48px; border-radius: var(--radius-lg); border: 1px solid rgba(255,255,255,0.1);">
-            <h3 style="color: var(--white); margin-bottom: 24px;">Transparência Radical</h3>
-            <ul style="color: rgba(255,255,255,0.8);">
-              <li style="margin-bottom: 16px; display: flex; align-items: center; gap: 12px;">
-                <span style="color: var(--teal);">✔</span> Mensalidades 100% fixas
+
+          <div class="transparency-card">
+            <h3 class="transparency-title">Simples. Estruturado. Transparente.</h3>
+            <ul class="transparency-list">
+              <li>
+                <span class="check-icon">✔</span>
+                <div class="list-text">
+                  <strong>Sem bancos</strong>
+                  <span>Operação direta e desburocratizada.</span>
+                </div>
               </li>
-              <li style="margin-bottom: 16px; display: flex; align-items: center; gap: 12px;">
-                <span style="color: var(--teal);">✔</span> Valor total definido em contrato
+              <li>
+                <span class="check-icon">✔</span>
+                <div class="list-text">
+                  <strong>Sem juros variáveis</strong>
+                  <span>Custo fixo do início ao fim.</span>
+                </div>
               </li>
-              <li style="margin-bottom: 16px; display: flex; align-items: center; gap: 12px;">
-                <span style="color: var(--teal);">✔</span> Sem taxas ocultas ou juros variáveis
-              </li>
-              <li style="margin-bottom: 16px; display: flex; align-items: center; gap: 12px;">
-                <span style="color: var(--teal);">✔</span> Processo de comunicação contínuo
+              <li>
+                <span class="check-icon">✔</span>
+                <div class="list-text">
+                  <strong>Sem taxas ocultas</strong>
+                  <span>O valor do contrato é o valor final.</span>
+                </div>
               </li>
             </ul>
           </div>
