[dyad] Adicionei uma segunda opção de estrutura de pagamento (24 meses) logo abaixo da de 12 meses na seção do dispositivo em destaque. Agora o usuário pode visualizar claramente as duas modalidades de duração do grupo, ambas mantendo os benefícios de mensalidades fixas, isenção de juros e taxas ocultas.

--- a/index.html
+++ b/index.html
@@ -92,11 +92,37 @@
 
             <div class="payment-card">
               <div class="payment-card__header">
-                <span>ESTRUTURA DE PAGAMENTO</span>
+                <span>ESTRUTURA DE PAGAMENTO - OPÇÃO 01</span>
               </div>
               <div class="payment-card__body">
                 <div class="payment-main">
                   <span class="payment-value">12 meses</span>
+                  <span class="payment-label">duração do grupo</span>
+                </div>
+                <div class="payment-grid">
+                  <div class="payment-item">
+                    <span class="item-value">Fixas</span>
+                    <span class="item-label">Mensalidades</span>
+                  </div>
+                  <div class="payment-item">
+                    <span class="item-value">Isento</span>
+                    <span class="item-label">Juros</span>
+                  </div>
+                  <div class="payment-item">
+                    <span class="item-value">Zero</span>
+                    <span class="item-label">Taxas ocultas</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="payment-card" style="margin-top: 16px;">
+              <div class="payment-card__header">
+                <span>ESTRUTURA DE PAGAMENTO - OPÇÃO 02</span>
+              </div>
+              <div class="payment-card__body">
+                <div class="payment-main">
+                  <span class="payment-value">24 meses</span>
                   <span class="payment-label">duração do grupo</span>
                 </div>
                 <div class="payment-grid">
