[dyad] Removi o botão externo grande da seção de destaque e integrei um botão "Reservar Agora" dentro de cada card de estrutura de pagamento (12 e 24 meses). Isso cria uma chamada para ação (CTA) muito mais direta e vinculada à escolha do plano pelo usuário.

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                   </div>
                 </div>
               </div>
+              <a href="#reservar" class="btn btn--primary btn--full" style="margin-top: 24px; padding: 12px;">Reservar Agora</a>
             </div>
 
             <div class="payment-card" style="margin-top: 16px;">
@@ -140,12 +141,8 @@
                   </div>
                 </div>
               </div>
+              <a href="#reservar" class="btn btn--primary btn--full" style="margin-top: 24px; padding: 12px;">Reservar Agora</a>
             </div>
-
-            <a href="#reservar" class="btn btn--primary btn--lg" style="margin-top: 32px; width: fit-content;">
-              Reservar Minha Posição <i data-lucide="arrow-right"
-                style="width: 18px; height: 18px; margin-left: 8px;"></i>
-            </a>
           </div>
         </div>
       </div>
