[dyad] Eliminei os espaços em branco excessivos entre as seções e otimizei as transições de todo o site para criar um fluxo de leitura contínuo. Além disso, removi a imagem técnica da seção "Por que confiar na WEKOTA?" conforme solicitado, deixando o layout mais limpo e focado na mensagem de segurança.

--- a/index.html
+++ b/index.html
@@ -151,16 +151,13 @@
     <!-- 4️⃣ FEATURES SECTION (WHY WEKOTA IS TRUSTWORTHY) -->
     <section class="section-padding" id="confianca" style="background-color: var(--white);">
       <div class="container">
-        <div class="text-center" style="margin-bottom: 80px;">
+        <div class="text-center">
           <div
             style="text-transform: uppercase; letter-spacing: 0.1em; font-weight: 700; color: var(--teal); margin-bottom: 24px;">
             Segurança & Robustez</div>
           <h2 class="hero__headline" style="font-size: 2.5rem; margin-bottom: 24px;">Por que confiar na WEKOTA?</h2>
           <p style="font-size: 1.125rem; color: var(--gray); max-width: 700px; margin: 0 auto;">Construímos uma
             plataforma baseada na transparência absoluta e no rigor contratual europeu.</p>
-        </div>
-        <div class="features-collage">
-          <img src="images/features-grid.png" alt="iPhone 17 Pro Max Technical Features" class="features-collage__img">
         </div>
       </div>
     </section>
